Changed XAI to Contextual AI

--- a/tutorials/compiler/20newsgroup/sample.ipynb
+++ b/tutorials/compiler/20newsgroup/sample.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# LIME Text Explainer via XAI\n",
     "\n",
-    "This tutorial demonstrates how to generate explanations using LIME's text explainer implemented by the XAI library. Much of the tutorial overlaps with what is covered in the [LIME tabular tutorial](lime_tabular_explainer.ipynb). To recap, the main steps for generating explanations are:\n",
+    "This tutorial demonstrates how to generate explanations using LIME's text explainer implemented by the Contextual AI library. Much of the tutorial overlaps with what is covered in the [LIME tabular tutorial](lime_tabular_explainer.ipynb). To recap, the main steps for generating explanations are:\n",
     "\n",
     "1. Get an explainer via the `ExplainerFactory` class\n",
     "2. Build the text explainer\n",
@@ -47,7 +47,7 @@
     "# Set the path so that we can import ExplainerFactory\n",
     "sys.path.append('../../../')\n",
     "\n",
-    "# Main XAI imports\n",
+    "# Main Contextual AI imports\n",
     "import xai\n",
     "from xai.explainer import ExplainerFactory"
    ]
