--- a/tutorials/compiler/automobile/sample.ipynb
+++ b/tutorials/compiler/automobile/sample.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generate an Explainability Report with the Automobile dataset using XAI\n",
+    "# Generate an Explainability Report with the Automobile dataset using Contextual AI\n",
     "\n",
-    "This notebook demonstrates how to generate an explainability report using the XAI compiler.\n",
+    "This notebook demonstrates how to generate an explainability report using the Contextual AI compiler.\n",
     "\n",
     "## Motivation\n",
     "\n",
@@ -17,7 +17,7 @@
     "3. _How can you establish trust between your machine learning model and its end-users?_\n",
     "\n",
     "\n",
-    "The XAI project attempts to address these questions by providing interpretability and explanations throughout the lifecycle of a ML solution, including:\n",
+    "The Contextual AI project attempts to address these questions by providing interpretability and explanations throughout the lifecycle of a ML solution, including:\n",
     "1. The data itself, allowing for robust data validation and intuitive visualisations\n",
     "2. The training/validation processes of model, allowing users to understand how well the model trained and which features were important\n",
     "3. The predictions, allowing for users to understand why a model exhibited particular behavior\n",
@@ -26,7 +26,7 @@
     "\n",
     "## Steps\n",
     "1. Train a model on the [automobile](https://www.kaggle.com/toramky/automobile-dataset) dataset\n",
-    "2. Evaluate the model's performance with XAI report"
+    "2. Evaluate the model's performance with Contextual AI report"
    ]
   },
   {
@@ -717,7 +717,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Involve XAI complier"
+    "### 2. Involve Contextual AI complier"
    ]
   },
   {
