--- a/tutorials/compiler/breastcancer/sample.ipynb
+++ b/tutorials/compiler/breastcancer/sample.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generate Model Interpreter Report with Breast Cancer dataset using XAI\n",
+    "# Generate Model Interpreter Report with Breast Cancer dataset using Contextual AI\n",
     "\n",
-    "This notebook demonstrates how to generate explanations report using complier implemented in the XAI library.\n",
+    "This notebook demonstrates how to generate explanations report using complier implemented in the Contextual AI library.\n",
     "\n",
     "\n",
     "## Motivation\n",
@@ -17,7 +17,7 @@
     "2. _How you able to explain the model performance? in business context that non-technical management can understand?_\n",
     "3. _How you able to compare between newly trained models and existing models is done manually every iteration?_\n",
     "\n",
-    "In XAI project, our simply vision is to:\n",
+    "In Contextual AI project, our simply vision is to:\n",
     "1. __Speed up data validation__\n",
     "2. __Simplify model engineering__\n",
     "3. __Build trust__  \n",
@@ -26,7 +26,7 @@
     "\n",
     "## Steps\n",
     "1. Create a model to Predict Breast Cancer, using the data provide in [sklearn dataset](https://scikit-learn.org/stable/datasets/index.html)\n",
-    "2. Evaluate the model performance with XAI report"
+    "2. Evaluate the model performance with Contextual AI report"
    ]
   },
   {
@@ -127,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Involve XAI complier"
+    "### 2. Involve Contextual AI complier"
    ]
   },
   {
