--- a/tutorials/compiler/germancredit/sample.ipynb
+++ b/tutorials/compiler/germancredit/sample.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generate Explainable Report with German Credit Risk dataset using XAI\n",
-    "This notebook demonstrates how to generate explanations report using complier implemented in the XAI library.\n",
+    "# Generate Explainable Report with German Credit Risk dataset using Contextual AI\n",
+    "This notebook demonstrates how to generate explanations report using complier implemented in the Contextual AI library.\n",
     "\n",
-    "In XAI project, our simply vision is to:\n",
+    "In Contextual AI project, our simply vision is to:\n",
     "1. __Speed up data validation__\n",
     "2. __Simplify model engineering__\n",
     "3. __Build trust__  \n",
@@ -51,7 +51,7 @@
     "\n",
     "## Steps\n",
     "1. Create a model to Predict \"Good\" or \"Bad\" risk transactions, using the data provide in [german credit risk](https://www.kaggle.com/uciml/german-credit)\n",
-    "2. Evaluate the model performance with XAI report\n",
+    "2. Evaluate the model performance with Contextual AI report\n",
     "\n",
     "## Notes\n",
     "This notebook require additional libs, check-on the `requirements.txt`"
@@ -36995,7 +36995,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 7. Explainability with XAI"
+    "# 7. Explainability with Contextual AI"
    ]
   },
   {
