--- a/tutorials/compiler/housingprices_halfmil/sample.ipynb
+++ b/tutorials/compiler/housingprices_halfmil/sample.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SHAP Tabular Explainer via XAI\n",
+    "# SHAP Tabular Explainer via Contextual AI\n",
     "\n",
-    "This tutorial demonstrates how to generate explanations using Shap's tabular explainer implemented by the XAI library. . To recap, the main steps for generating explanations are:\n",
+    "This tutorial demonstrates how to generate explanations using Shap's tabular explainer implemented by the Contextual AI library. . To recap, the main steps for generating explanations are:\n",
     "\n",
     "1. Get an explainer via the `ExplainerFactory` class\n",
     "2. Build the text explainer\n",
