--- a/tutorials/compiler/titanic/sample.ipynb
+++ b/tutorials/compiler/titanic/sample.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generate Explainable Report with Titanic dataset using XAI\n",
+    "# Generate Explainable Report with Titanic dataset using Contextual AI\n",
     "\n",
-    "This notebook demonstrates how to generate explanations report using complier implemented in the XAI library.\n",
+    "This notebook demonstrates how to generate explanations report using complier implemented in the Contextual AI library.\n",
     "\n",
     "\n",
     "## Motivation\n",
@@ -17,7 +17,7 @@
     "2. _How you able to explain the model performance? in business context that non-technical management can understand?_\n",
     "3. _How you able to compare between newly trained models and existing models is done manually every iteration?_\n",
     "\n",
-    "In XAI project, our simply vision is to:\n",
+    "In Contextual AI project, our simply vision is to:\n",
     "1. __Speed up data validation__\n",
     "2. __Simplify model engineering__\n",
     "3. __Build trust__  \n",
@@ -26,7 +26,7 @@
     "\n",
     "## Steps\n",
     "1. Create a model to Predict survival on the Titanic, using the data provide in [titanic](https://www.kaggle.com/c/titanic/data)\n",
-    "2. Evaluate the model performance with XAI report"
+    "2. Evaluate the model performance with Contextual AI report"
    ]
   },
   {
@@ -517,7 +517,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Involve XAI complier"
+    "### 2. Involve Contextual AI complier"
    ]
   },
   {
@@ -2816,7 +2816,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using XAI Compiler with existing variables"
+    "### Using Contextual AI Compiler with existing variables"
    ]
   },
   {
