--- a/tutorials/compiler/titanic2/sample.ipynb
+++ b/tutorials/compiler/titanic2/sample.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generate Explainable Report with Titanic dataset using XAI\n",
+    "# Generate Explainable Report with Titanic dataset using Contextual AI\n",
     "\n",
-    "This notebook demonstrates how to generate explanations report using complier implemented in the XAI library.\n",
+    "This notebook demonstrates how to generate explanations report using complier implemented in the Contextual AI library.\n",
     "\n",
     "\n",
     "## Motivation\n",
@@ -17,16 +17,16 @@
     "2. _How you able to explain the model performance? in business context that non-technical management can understand?_\n",
     "3. _How you able to compare between newly trained models and existing models is done manually every iteration?_\n",
     "\n",
-    "In XAI project, our simply vision is to:\n",
+    "In Contextual AI project, our simply vision is to:\n",
     "1. __Speed up data validation__\n",
     "2. __Simplify model engineering__\n",
     "3. __Build trust__  \n",
     "  \n",
-    "For more details, please refer to our [whitepaper](https://sap.sharepoint.com/sites/100454/ML_Apps/Shared%20Documents/Reusable%20Components/Explainability/XAI_Whitepaper.pdf?csf=1&e=phIUNN&cid=771297d7-d488-441a-8a65-dab0305c3f04)\n",
+    "For more details, please refer to our [whitepaper](https://sap.sharepoint.com/sites/100454/ML_Apps/Shared%20Documents/Reusable%20Components/Explainability/Contextual AI_Whitepaper.pdf?csf=1&e=phIUNN&cid=771297d7-d488-441a-8a65-dab0305c3f04)\n",
     "\n",
     "## Steps\n",
     "1. Create a model to Predict survival on the Titanic, using the data provide in [titanic](https://www.kaggle.com/c/titanic/data)\n",
-    "2. Evaluate the model performance with XAI report and generate a local explainer pkl\n",
+    "2. Evaluate the model performance with Contextual AI report and generate a local explainer pkl\n",
     "3. Load the explainer pkl while inference and explain the instance\n"
    ]
   },
@@ -607,7 +607,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Involve XAI complier"
+    "### 2. Involve Contextual AI complier"
    ]
   },
   {
