--- a/tutorials/data_explorer/data_explorer.ipynb
+++ b/tutorials/data_explorer/data_explorer.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Explorer via XAI\n",
+    "# Data Explorer via Contextual AI\n",
     "\n",
     "This tutorial demonstrats how to explorer different types of data using `xai.data.explorer`. \n",
     "\n",
