--- a/tutorials/explainer/lime_tabular_explainer.ipynb
+++ b/tutorials/explainer/lime_tabular_explainer.ipynb
@@ -6,12 +6,12 @@
    "source": [
     "# LIME Tabular Explainer via XAI\n",
     "\n",
-    "This tutorial demonstrates how to generate explanations using LIME's tabular explainer implemented by the XAI library.\n",
+    "This tutorial demonstrates how to generate explanations using LIME's tabular explainer implemented by the Contextual AI library.\n",
     "\n",
-    "At a high level, explanations can be obtained from any XAI explanation algorithm in 3 steps:\n",
+    "At a high level, explanations can be obtained from any Contextual AI explanation algorithm in 3 steps:\n",
     "\n",
-    "1. Create an explainer via the `ExplainerFactory` class, which serves as the primary interface between the user and all XAI-supported explanation algorithms\n",
-    "2. Build the explainer by calling the `build_explainer` method (which is implemented by any XAI explanation algorithm) and providing arguments that are specific to that algorithm\n",
+    "1. Create an explainer via the `ExplainerFactory` class, which serves as the primary interface between the user and all Contextual AI-supported explanation algorithms\n",
+    "2. Build the explainer by calling the `build_explainer` method (which is implemented by any Contextual AI explanation algorithm) and providing arguments that are specific to that algorithm\n",
     "3. Get explanations for some data instance by calling the `explain_instance` method (which is also common among all algorithms) and provoding arguments that are specific to that algorithm"
    ]
   },
@@ -21,7 +21,7 @@
    "source": [
     "### Step 1: Import libraries\n",
     "\n",
-    "`xai.explainer.ExplainerFactory` is the main class that users of XAI interact with. `xai` contains some constants that are used to instantiate an `AbstractExplainer` object."
+    "`xai.explainer.ExplainerFactory` is the main class that users of Contextual AI interact with. `xai` contains some constants that are used to instantiate an `AbstractExplainer` object."
    ]
   },
   {
@@ -45,7 +45,7 @@
     "# Set the path so that we can import ExplainerFactory\n",
     "sys.path.append('../../')\n",
     "\n",
-    "# Main XAI imports\n",
+    "# Main Contextual AI imports\n",
     "import xai\n",
     "from xai.explainer import ExplainerFactory"
    ]
@@ -101,7 +101,7 @@
    "source": [
     "### Step 3: Instantiate the explainer\n",
     "\n",
-    "This is where we instantiate the XAI explainer. This `ExplainerFactory` class is in charge of loading a particular explanation algorithm. The user is required to provide one argument - the `domain`, which indicates the domain of the training data (e.g. `tabular` or `text`). The available domains can be found in `xai.DOMAIN`. Users can also select a particular explainer algorithm by providing the algorithm's name (registered in `xai.ALG`) to the `algorithm` parameter. If this argument is not provided, the `ExplainerFactory.get_explainer` method defaults to a pre-set algorithm for that domain which can be found in `xai/explainer/config.py`. \n",
+    "This is where we instantiate the Contextual AI explainer. This `ExplainerFactory` class is in charge of loading a particular explanation algorithm. The user is required to provide one argument - the `domain`, which indicates the domain of the training data (e.g. `tabular` or `text`). The available domains can be found in `xai.DOMAIN`. Users can also select a particular explainer algorithm by providing the algorithm's name (registered in `xai.ALG`) to the `algorithm` parameter. If this argument is not provided, the `ExplainerFactory.get_explainer` method defaults to a pre-set algorithm for that domain which can be found in `xai/explainer/config.py`. \n",
     "\n",
     "We want to load the `LimeTabularExplainer`, so we provide `xai.DOMAIN.TABULAR` as the argument to `domain` and `xai.ALG.LIME` as the argument to `algorithm`. Note that `xai.ALG.LIME` is the default tabular explanation algorithm; hence this also works:\n",
     "\n",
@@ -245,7 +245,7 @@
    "source": [
     "### Step 6: Save and load the explainer\n",
     "\n",
-    "Finally, every XAI explainer supports saving and loading functions."
+    "Finally, every Contextual AI explainer supports saving and loading functions."
    ]
   },
   {
