--- a/tutorials/explainer/lime_text_explainer_with_keras.ipynb
+++ b/tutorials/explainer/lime_text_explainer_with_keras.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# XAI LIME Text ExplainerFactory with Keras\n",
+    "# Contextual AI LIME Text ExplainerFactory with Keras\n",
     "\n",
     "This tutorial is similar to [lime_text_explainer.ipynb](lime_text_explainer.ipynb), but instead of a Naive Bayes model we attempt to generate explanations with a neural network implemented with Keras.\n",
     "\n",
@@ -12,7 +12,7 @@
     "\n",
     "The modelling/text processing portions of this tutorial are heavily borrowed from [this Keras blog](https://blog.keras.io/using-pre-trained-word-embeddings-in-a-keras-model.html).\n",
     "\n",
-    "Like with other XAI tutorials, the main steps for generating explanations are:\n",
+    "Like with other Contextual AI tutorials, the main steps for generating explanations are:\n",
     "\n",
     "1. Get an explainer via the `ExplainerFactory` class\n",
     "2. Build the text explainer\n",
@@ -70,7 +70,7 @@
     "# Set the path so that we can import the ExplainerFactory\n",
     "sys.path.append('../../')\n",
     "\n",
-    "# Main XAI imports\n",
+    "# Main Contextual AI imports\n",
     "import xai\n",
     "from xai.explainer import ExplainerFactory\n",
     "\n",
