--- a/tutorials/explainer/shap_tabular_explainer.ipynb
+++ b/tutorials/explainer/shap_tabular_explainer.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SHAP Kernel Explainer for Tabular Data via XAI\n",
+    "# SHAP Kernel Explainer for Tabular Data via Contextual AI\n",
     "\n",
-    "This tutorial demonstrates how to generate explanations using SHAP's Kernel Explainer implemented by the XAI library. Much of the tutorial overlaps with what is covered in the [LIME tabular tutorial](lime_tabular_explainer.ipynb). To recap, the main steps for generating explanations are:\n",
+    "This tutorial demonstrates how to generate explanations using SHAP's Kernel Explainer implemented by the Contextual AI library. Much of the tutorial overlaps with what is covered in the [LIME tabular tutorial](lime_tabular_explainer.ipynb). To recap, the main steps for generating explanations are:\n",
     "\n",
     "1. Get an explainer via the `ExplainerFactory` class\n",
     "2. Build the text explainer\n",
@@ -43,7 +43,7 @@
     "# Set the path so that we can import ExplainerFactory\n",
     "sys.path.append('../../')\n",
     "\n",
-    "# Main XAI imports\n",
+    "# Main Contextual AI imports\n",
     "import xai\n",
     "from xai.explainer import ExplainerFactory"
    ]
@@ -143,7 +143,7 @@
    "source": [
     "### Step 4: Build the explainer\n",
     "\n",
-    "Like with any explainer in XAI, the SHAP Kernel Explainer implements a `build_explainer` method to initialize the explainer (this can include pre-training a model or initializing some parameters). Note, however, that the `build_explainer` for SHAP requires a different set of parameters than that of the LIME Tabular Explainer. This also goes for `explain_instance`."
+    "Like with any explainer in Contextual AI, the SHAP Kernel Explainer implements a `build_explainer` method to initialize the explainer (this can include pre-training a model or initializing some parameters). Note, however, that the `build_explainer` for SHAP requires a different set of parameters than that of the LIME Tabular Explainer. This also goes for `explain_instance`."
    ]
   },
   {
@@ -254,7 +254,7 @@
    "source": [
     "### Step 6: Save and load the explainer\n",
     "\n",
-    "Any explanation algorithm in XAI can be saved/loaded via `save_explainer` and `load_explainer`, respectively."
+    "Any explanation algorithm in Contextual AI can be saved/loaded via `save_explainer` and `load_explainer`, respectively."
    ]
   },
   {
