--- a/tutorials/formatter/hypertext_markup/html_report_generation.ipynb
+++ b/tutorials/formatter/hypertext_markup/html_report_generation.ipynb
@@ -65,7 +65,7 @@
    "metadata": {},
    "source": [
     "### Step 2: Create section and add detail to report \n",
-    "Content refer a detail block inside report. XAI library group certain popular detail into business group, some examples includes but not limited to:\n",
+    "Content refer a detail block inside report. Contextual AI library group certain popular detail into business group, some examples includes but not limited to:\n",
     "- Dataset distribution\n",
     "- Feature value distribution (based on feature type: categorical, numeric, text, etc.)\n",
     "- Evaluation result summary\n",
@@ -696,7 +696,7 @@
    "metadata": {},
    "source": [
     "##### 1.4.3 Text Field Distribution\n",
-    "For text fields, a woldcloud will be shown with a size weigthed on the TF-IDF. Besides, XAI has some pre-defined text patterns, such as `Email`, `URL`, `Datetime`. If the text field is analyzed with XAI Data Explorer package, the percentage of documents contains each pattern will also be analyzed and displayed.\n",
+    "For text fields, a woldcloud will be shown with a size weigthed on the TF-IDF. Besides, Contextual AI has some pre-defined text patterns, such as `Email`, `URL`, `Datetime`. If the text field is analyzed with Contextual AI Data Explorer package, the percentage of documents contains each pattern will also be analyzed and displayed.\n",
     "See details about `xai.data_explorer.text_analyzer`. "
    ]
   },
@@ -1634,7 +1634,7 @@
    "outputs": [],
    "source": [
     "report.overview.add_section_title(text=\"Overview\")\n",
-    "summary_notes_text = '''This report serves as a demo for the XAI library. \n",
+    "summary_notes_text = '''This report serves as a demo for the Contextual AI library. \n",
     "The data used to generate this report is not from any specific use case.\n",
     "Sorry for any inconsistency in the report data. \n",
     "'''\n",
