--- a/tutorials/model_interpreter/model_interpreter.ipynb
+++ b/tutorials/model_interpreter/model_interpreter.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model Interpreter via XAI\n",
+    "# Model Interpreter via Contextual AI\n",
     "\n",
     "In this tutorial, we use `xai` to analyze a trained model and its features.\n",
     "The tutorial contains 3 parts:\n",
@@ -19,7 +19,7 @@
    "source": [
     "### Prerequisites : Import libraries\n",
     "\n",
-    "`xai.model.interpreter` is the main package that users of XAI interact with. "
+    "`xai.model.interpreter` is the main package that users of Contextual AI interact with. "
    ]
   },
   {
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Main XAI imports\n",
+    "# Main Contextual AI imports\n",
     "import xai\n",
     "from xai.model.interpreter.model_interpreter import ModelInterpreter"
    ]
