--- a/tutorials/compiler/housingprices/sample.ipynb
+++ b/tutorials/compiler/housingprices/sample.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generate Model Interpreter Report with House Price dataset using XAI\n",
+    "# Generate Model Interpreter Report with House Price dataset using Contextual AI\n",
     "\n",
-    "This notebook demonstrates how to generate explanations report using complier implemented in the XAI library.\n",
+    "This notebook demonstrates how to generate explanations report using complier implemented in the Contextual AI library.\n",
     "\n",
     "\n",
     "## Motivation\n",
@@ -17,7 +17,7 @@
     "2. _How you able to explain the model performance? in business context that non-technical management can understand?_\n",
     "3. _How you able to compare between newly trained models and existing models is done manually every iteration?_\n",
     "\n",
-    "In XAI project, our simply vision is to:\n",
+    "In Contextual AI project, our simply vision is to:\n",
     "1. __Speed up data validation__\n",
     "2. __Simplify model engineering__\n",
     "3. __Build trust__  \n",
@@ -27,7 +27,7 @@
     "\n",
     "## Steps\n",
     "1. Create a model to Predict House Price, using the data provide in [house prices dataset](https://www.kaggle.com/c/house-prices-advanced-regression-techniques/data)\n",
-    "2. Evaluate the model performance with XAI report\n",
+    "2. Evaluate the model performance with Contextual AI report\n",
     "\n",
     "## Credits\n",
     "1. Pramodh, Manduri <manduri.pramodh@sap.com>"
@@ -221,7 +221,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Involve XAI complier"
+    "### 2. Involve Contextual AI complier"
    ]
   },
   {
